# 23_study_OpenAI

./: 231007_Does_the_functions_parameter_count_as_input_tokens.ipynb  README.md  pyproject.toml
