[tool.poetry]
name = "23-study-openai"
version = "0.1.0"
description = ""
authors = ["tokoi <tokoi@crandim.co.jp>"]
readme = "README.md"
packages = [{include = "23_study_openai"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
